# edge-copilot-helper

./: .gitignore  CLAUDE.md  Cargo.toml  EdgeExitWatcher.swift  LICENSE  LICENSE_CN  README.md  fix-edge-copilot.sh  install.sh  setup-watcher.sh  uninstall.sh
.cursor/commands/: bump-version.md  release.md
.github/workflows/: ci.yml  release.yml
src/: common.rs  constants.rs  logger.rs  macos.rs  main.rs  polling.rs
src/service/: linux.rs  macos.rs  mod.rs  windows.rs
