[package]
name = "edge-copilot-helper"
version = "0.1.0"
edition = "2021"
description = "Cross-platform utility to bypass Microsoft Edge Copilot region restrictions"
license = "MIT"
repository = "https://github.com/qiyuey/edge-copilot-helper"

[dependencies]
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sysinfo = "0.33"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSArray", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSApplication"] }
block2 = "0.6"

