[package]
name = "edge-copilot-helper"
version = "0.1.13"
edition = "2024"
description = "Cross-platform utility to bypass Microsoft Edge Copilot region restrictions"
license = "Anti-996"
repository = "https://github.com/qiyuey/edge-copilot-helper"

[dependencies]
serde_json = "1"
dirs = "5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0"
fs2 = "0"

[target.'cfg(target_os = "windows")'.dependencies]
simplelog = "0"
winapi = { version = "0", features = ["consoleapi", "wincon", "fileapi", "processenv", "winbase"] }
chrono = "0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
simplelog = "0"
chrono = "0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sysinfo = "0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0"
objc2-foundation = { version = "0", features = ["NSNotification", "NSString", "NSArray", "NSDictionary"] }
objc2-app-kit = { version = "0", features = ["NSWorkspace", "NSRunningApplication", "NSApplication"] }
block2 = "0"
